clusters/openshift/apps/utility/excalidraw/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: excalidraw
  namespace: excalidraw
  labels:
    external-dns: 'true'
  annotations:
    external-dns.alpha.kubernetes.io/target: vanillax.xyz
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: openshift-gateway
    namespace: openshift-ingress
    sectionName: https
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: openshift-gateway-internal
    namespace: openshift-ingress
    sectionName: https
  hostnames:
  - excalidraw.vanillax.xyz
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: "/"
    backendRefs:
    - group: ''
      kind: Service
      name: excalidraw
      port: 80
      weight: 1
